table slot and restaurant table module updated
