# models/RestaurantTable.js
@@ -1,0 +1,38 @@
+const Sequelize = require("sequelize");
+const db = require("../config/db");
+
+module.exports = db.sequelize.define(
+  "restaurant_table",
+  {
+    id: {
+      type: Sequelize.BIGINT,
+      primaryKey: true,
+      autoIncrement: true,
+    },
+    restaurant_id: {
+      type: Sequelize.BIGINT,
+    },
+    slot_id: {
+      type: Sequelize.BIGINT,
+    },
+    table_name: {
+      type: Sequelize.STRING,
+    },
+    capacity: {
+      type: Sequelize.INTEGER,
+    },
+    status: {
+      type: Sequelize.STRING,
+    },
+    location_area: {
+      type: Sequelize.STRING,
+    },
+    is_active: {
+      type: Sequelize.BOOLEAN,
+      defaultValue: true,
+    },
+  },
+  {
+    timestamps: 1,
+  }
+);
